# OCM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.VSCodeCounter/2024-11-21_20-33-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmake/: OCMConfig.cmake.in  namespace.cmake
examples/: semaphore_test  semaphore_test_named  test.cpp  test2.cpp
examples/debug_anywhere/: CMakeLists.txt  debug_anywhere.cpp
examples/executer/: CMakeLists.txt  executer.cpp  generated_classes.hpp  node_test.hpp  yaml_load_generated_classes.hpp
examples/executer/yaml_template/: yaml_load_generated_classes.hpp
examples/executer/yaml_template/task/: task_config.yaml  task_config2.yaml  task_setting.yaml  yaml_load_generated_classes.hpp
examples/inter-device/: CMakeLists.txt
examples/inter-process/: CMakeLists.txt  main.cpp  publish.cpp  sem.cpp  shm.cpp  subscribe.cpp
examples/inter-process-lcm/: CMakeLists.txt  publish.cpp  subscribe.cpp  subscribe.py
examples/inter-process-ros2/main/: CMakeLists.txt
examples/inter-process-ros2/main/src/: main.cpp
examples/inter-process-ros2/ros2_msg/: package.xml
examples/intra-process/: AtomicPtr.cpp  CMakeLists.txt  RWLockData.cpp  main.cpp
examples/log_anywhere/: CMakeLists.txt  logger.cpp
examples/logger/: CMakeLists.txt
examples/logger_test/: CMakeLists.txt  logger.cpp
examples/node/: CMakeLists.txt  node_map.cpp  test.cpp
examples/parameter/: CMakeLists.txt  des  find_yaml  generated_classes.hpp  output.cpp  paratest.cpp  task_config.yaml  test copy 2.py  test copy 3.py  test copy 5.py  test copy 6.py  test copy 7.py  test copy 8.py  test copy.py  test.py  test1121.py
examples/parameter/raise_a2_t2/action_manager/: 530.yaml  default.yaml
examples/parameter/raise_a2_t2/action_manager/test2/: a.yaml
examples/parameter/raise_a2_t2/action_setting/: 530.yaml  a.yaml  b.yaml  leg_test.yaml  real_robot.yaml  simulation.yaml
examples/parameter/raise_a2_t2/main/: encrypted.yaml  mode.yaml  model.yaml  robot.yaml
examples/ros2/main/src/: main.cpp
examples/task/: CMakeLists.txt  external_timer.cpp  internal_timer.cpp  test.cpp  trigger.cpp
ocm/: CMakeLists.txt
ocm/cmake/: OCMConfig.cmake.in
ocm/include/common/: enum.hpp  ip_tool.hpp  prefix_string.hpp  struct_type.hpp
ocm/include/debug_anywhere/: DebugData.hpp  debug_anywhere.hpp  debug_data.hpp
ocm/include/executer/: desired_group_data.hpp  executer.hpp
ocm/include/executer/common/: timer.h
ocm/include/executer/common/rt/: memory_lock.hpp  sched_rt.hpp
ocm/include/log_anywhere/: log_anywhere.hpp
ocm/include/logger/: logger.hpp
ocm/include/node/: node.hpp  node_map.hpp
ocm/include/ocm/: atomic_ptr.hpp  ocm.hpp  shard_memory_data.hpp  shared_memory_semaphore.hpp  shared_memory_topic.hpp  shared_memory_topic_lcm.hpp  shared_memory_topic_ros2.hpp  write_read_lock_data.hpp
ocm/include/parameter/: parameter.hpp
ocm/include/task/: task.hpp  task_base.hpp  timer.hpp
ocm/include/task/rt/: memory_lock.hpp  sched_rt.hpp
ocm/parameter_generator/: README.md
ocm/python/parameter_generator/: ocm-parmgen.py
ocm/python/shared_memory_topic/shared_memory_topic/: shared_memory_topic.py
ocm/src/: debug_anywhere.cpp  executer.cpp  log_anywhere.cpp  node.cpp  node_map.cpp  ocm.cpp  parameter.cpp  task.cpp  task_base.cpp  timer.cpp
ocmgen/: CMakeLists.txt
ocmgen/include/ocmgen/: getopt.h  ocm_coretypes.h  ocmgen.h  tokenize.h
ocmgen/src/: emit_cpp.cpp  emit_python.cpp  getopt.cpp  main.cpp  ocmgen.cpp  tokenize.cpp
